# iot-api-client

./: CMakeLists.txt
src/IoT/: ClientRun.cpp  HttpRequest.hpp  IoTClient.cpp  IoTClient.hpp  RequestModelDto.hpp  TemperatureClient.hpp  TemperatureHttpRequest.hpp  TemperatureModelDto.hpp
